--- a/Normal_DATN/src/main/resources/i18n/layout.properties
+++ b/Normal_DATN/src/main/resources/i18n/layout.properties
@@ -2,17 +2,18 @@ lo.mn.language=Language
 lo.mn.about=About Us
 lo.mn.contact=Contact Us
 lo.mn.page=Page
-lo.mn.cart=Cart
+lo.mn.cart=My Cart
 lo.mn.login=Login
 lo.mn.register=Register
-lo.mn.forgot=Forgot password
-lo.mn.updateacc=Update account
+lo.mn.forgot=Forgot Password
+lo.mn.updateacc=Eidt Account
 lo.mn.logout=Logout
-lo.mn.myaccount=My account
-lo.mn.changepass=Change password
-lo.mn.category=Category
+lo.mn.myaccount=My Account
+lo.mn.changepass=Change Password
+lo.mn.category=Categories
 lo.mn.home=Home
-lo.mn.history=Purchase history
-
+lo.mn.history=Purchase History
+lo.mn.men= Men
+lo.mn.women= Women 
 
 
