--- a/Normal_DATN/src/main/resources/i18n/layout_vi.properties
+++ b/Normal_DATN/src/main/resources/i18n/layout_vi.properties
@@ -1,16 +1,17 @@
 lo.mn.language= Ngôn ngữ
-lo.mn.about= Giới thiệu
-lo.mn.contact=Liên hệ
+lo.mn.about= Giới Thiệu
+lo.mn.contact=Liên Hệ
 lo.mn.page=Trang
-lo.mn.cart=Giỏ hàng 
-lo.mn.login=Đăng nhập
-lo.mn.register=Đăng ký
-lo.mn.forgot=Quên mật khẩu
-lo.mn.updateacc=Cập nhật tài khoản
-lo.mn.logout=Đăng xuất
-lo.mn.myaccount=Tài khoản của tôi
-lo.mn.changepass=Đổi mật khẩu
-lo.mn.category=Danh mục
-lo.mn.home=Trang chủ
-lo.mn.history= Lịch sử mua hàng
-
+lo.mn.cart=Giỏ Hàng Của Tôi
+lo.mn.login=Đăng Nhập
+lo.mn.register=Đăng Ký
+lo.mn.forgot=Quên Mật Lhẩu
+lo.mn.updateacc=Chỉnh Sửa Tài Khoản
+lo.mn.logout=Đăng Xuất
+lo.mn.myaccount=Tài Khoản Của Tôi
+lo.mn.changepass=Đổi Mật Khẩu
+lo.mn.category=Danh Mục
+lo.mn.home=Trang Chủ
+lo.mn.history= Lịch Sử Mua Hàng
+lo.mn.men= Nam
+lo.mn.women= Nữ
