--- a/Normal_DATN/src/main/resources/i18n/home.properties
+++ b/Normal_DATN/src/main/resources/i18n/home.properties
@@ -7,5 +7,5 @@ contactus.title=CONTACT US
 product.title=PRODUCT
 order.title=ORDER
 detail.title=ORDER INFORMATION
-
 history.title=PURCHASE HISTORY
+historydetail.title=PURCHASE HISTORY DETAILS
