--- a/Normal_DATN/src/main/resources/i18n/home_vi.properties
+++ b/Normal_DATN/src/main/resources/i18n/home_vi.properties
@@ -8,7 +8,7 @@ product.title=SẢN PHẨM
 order.title=ĐẶT HÀNG
 detail.title=THÔNG TIN ĐẶT HÀNG
 history.title=LỊCH SỬ MUA HÀNG
-historydetail = CHI TIẾT LỊCH SỬ MUA HÀNG
+historydetail.title= CHI TIẾT LỊCH SỬ MUA HÀNG
 
 
 
